# tog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindCryptoPP.cmake
libs/tomlplusplus/: toml.h
src/: blob.cpp  blob.h  cli.cpp  cli.h  commit.cpp  commit.h  crypto.cpp  crypto.h  handle.h  main.cpp  object.h  repository.cpp  repository.h  tog.cpp  tree.cpp  tree.h
